WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75309
[GTK] Fix compilation issue when selecting opengl for Accelerated compositing
https://bugs.webkit.org/show_bug.cgi?id=75309
Summary
[GTK] Fix compilation issue when selecting opengl for Accelerated compositing
ChangSeok Oh
Reported
2011-12-28 06:25:50 PST
This is trivial patch to fix compiling issue, when choosing opengl for AC.
Attachments
Patch
(7.51 KB, patch)
2011-12-28 09:07 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2011-12-28 09:07:04 PST
Created
attachment 120680
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-28 17:26:02 PST
Comment on
attachment 120680
[details]
Patch Clearing flags on attachment: 120680 Committed
r103788
: <
http://trac.webkit.org/changeset/103788
>
WebKit Review Bot
Comment 3
2011-12-28 17:26:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug