[GTK] Fix compilation issue when selecting opengl for Accelerated compositing https://bugs.webkit.org/show_bug.cgi?id=75309

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2011-12-28
Reviewed by Martin Robinson.

.:

Replace WTF_USE_TEXTURE_MAPPER_OPENGL to WTF_USE_TEXTURE_MAPPER_GL

* GNUmakefile.am:

Source/WebCore:

Add TextureMapperGL and TextureMapperGLCairo files.
They define new classes required to implement TextureMapperGL for GTK port.

No new tests required.

* GNUmakefile.list.am:
* platform/graphics/cairo/TextureMapperGLCairo.cpp: Added.
(WebCore::BGRA32PremultimpliedBufferCairo::BGRA32PremultimpliedBufferCairo):
(WebCore::BGRA32PremultimpliedBufferCairo::~BGRA32PremultimpliedBufferCairo):
(WebCore::BGRA32PremultimpliedBufferCairo::beginPaint):
(WebCore::BGRA32PremultimpliedBufferCairo::data):
(WebCore::BGRA32PremultimpliedBufferCairo::endPaint):
(WebCore::uidForImage):
(WebCore::BGRA32PremultimpliedBuffer::create):
* platform/graphics/cairo/TextureMapperGLCairo.h: Added.

Canonical link: https://commits.webkit.org/92089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103788 268f45cc-cd09-0410-ab3c-d52691b4dbfc